# test2

./: .breakpoints  Pipfile  Spell_book.py  main.py  pyproject.toml  resurgence.py  sheet_parse.py  template_sheet_create.py
data/db/: build.sql  database.db
lib/db/: db.py
